plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.14' // Simplifies JavaFX setup
}

repositories {
    mavenCentral()
}

dependencies {
    // Testing dependencies
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Add JavaFX dependencies
    implementation "org.openjfx:javafx-controls:21"
    implementation "org.openjfx:javafx-fxml:21"

    // Add BouncyCastle dependencies
    implementation 'org.bouncycastle:bcprov-jdk18on:1.76'
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.76'

    // Optional: Guava library
    implementation 'com.google.guava:guava:32.1.2-jre'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'crypto.App'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaExec) {
    doFirst {
        def pathToFx = System.getenv('PATH_TO_FX_') ?: 'C:/Program Files/Java/javafx/javafx-sdk-21.0.5/lib'
        jvmArgs = [
            '--module-path', pathToFx,
            '--add-modules', 'javafx.controls,javafx.fxml'
        ]
    }
}

